# doctor-engine

./: .gitignore  Cargo.toml  build.mts  ci.mts  demo.json  justfile  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.mts
.github/actions/: matrix.yml
.github/workflows/: build-napi.yml  build-platform.yml  cross-platform-ci.yml  debug-cross-platform.yml  debug-ubuntu.yml  debug.yml  napi-build-bin.yml  napi-publish.yml  npm-publish.yml  release.yml  release.yml_back  reusable-cargo-test.yml  reusable-napi-build-bin.yml  reusable-napi-publish.yml  reusable-npm-publish.yml  run-release.yml
.sfconfig/: spec.json
bindings/doctor/: Cargo.toml  demo.mjs  index.d.ts  index.js  package.json  pnpm-lock.yaml
bindings/doctor-binding/: Cargo.toml  demo.mjs  doctor-binding.wasi-browser.js  doctor-binding.wasi.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml
bindings/doctor-binding/src/: lib.rs  log.rs
bindings/doctor-binding/src/cloc/: js_language_stats.rs  js_language_type.rs  lang_stats.rs  lang_type.rs  language_stats.rs  language_type.rs  mod.rs  opts.rs
bindings/doctor-binding/src/lint/: mod.rs
bindings/doctor-binding/src/specification/: location.rs  mod.rs
bindings/doctor-binding/src/specs/: diagnostics.rs  js_labeled_span.rs  js_location.rs  js_messages.rs  js_severity.rs  labeled_span.rs  location.rs  mod.rs  (+2 more)
bindings/doctor/src/: lib.rs  log.rs
crates/binding/: Cargo.toml  browser.js  demo.mjs  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/binding/npm/darwin-arm64/: engine.darwin-arm64.node
crates/binding/scripts/: patch-npm-dirs.mjs
crates/binding/src/cloc/: mod.rs  raw_opts.rs
crates/binding/src/lint/: diagnostic.rs  mod.rs  position.rs  span.rs
crates/binding/src/specs/: js_diagnostics.rs  js_labeled_span.rs  js_location.rs  js_messages.rs  js_position.rs  mod.rs  raw_specifications_render_opts.rs
crates/cloc/: Cargo.toml
crates/cloc/src/: language_statistics.rs  language_type.rs  lib.rs  opts.rs  stats.rs
crates/core/: Cargo.toml
crates/core/src/: diagnostic.rs  error.rs  hack_source_type.rs  ignore.rs  lib.rs  message.rs
crates/core/src/loc/: location.rs  mod.rs  position.rs
crates/core/src/traits/: mod.rs  validator.rs
crates/doctor/: Cargo.toml
crates/doctor/src/: dashboard.rs  lib.rs  scheduler.rs
crates/doctor/src/specs/: mod.rs  register.rs  writer.rs
crates/doctor/src/standards/: mod.rs  register_lint.rs  register_node_version.rs  register_npmrc.rs  register_package_json.rs
crates/doctor/src/stats/: mod.rs
crates/ext/: Cargo.toml
crates/ext/src/: doctor_diagnostic.rs  error.rs  lib.rs  location.rs  message.rs
crates/lint/: .oxlintrc.json  ARC_MUTEX_EXPLAINED.md  Cargo.toml  oxlintrc.json
crates/lint/fixtures/: a.jsx
crates/lint/src/: category.rs  category_getter.rs  config_builder.rs  error.rs  file_diagnostic.rs  lib.rs  linter_runner.rs  main.rs  named_source.rs  oxlint_rc_builder.rs  validator.rs
crates/lint/src/common/: environments.rs  error.rs  file_diagnostic.rs  lint_mode.rs  mod.rs  named_source.rs
crates/lint/src/config/: mod.rs  oxlintrc_builder.rs  react_config.rs  sfconfig.rs
crates/lint/src/ext/: category_getter.rs  mod.rs  rule_getter.rs
crates/lint/src/inner/: mod.rs
crates/lint/src/inner/v2025_06_01/: category.rs  eslint.rs  jest.rs  mod.rs  oxc.rs  promise.rs  react.rs  typescript.rs  unicorn.rs
crates/node/: Cargo.toml
crates/node/fixtures/: invalid2
crates/node/src/: diagnostics.rs  err.rs  error.rs  lib.rs  node_version.rs  validator.rs  validator_s.rs
crates/npmrc/: Cargo.toml
crates/npmrc/fixtures/: .has_end  .undef_registry
crates/npmrc/src/: diagnostics.rs  error.rs  lib.rs  npmrc_config.rs  validator.rs
crates/package_json/: Cargo.toml
crates/package_json/fixtures/: library_version_not_allowed.json  no_package_manager.json  package.json  private_false.json  shineout_2_ne_fix.json  shineout_3_9_ne_fix.json  shineout_3_fix.json  shineout_3_fix_2.json
crates/package_json/src/: demo.rs  diagnostics.rs  error.rs  lib.rs  main.rs  package_json.rs  validator.rs  version.rs
crates/package_json/tests/: package_json.rs  package_json_test.rs
crates/package_json/tests/fixtures/: package_1.json
crates/syntax/: Cargo.toml
crates/syntax/fixtures/: a.js  a.mts
crates/syntax/src/: lib.rs
crates/walk/: Cargo.toml
crates/walk/src/: demo.rs  error.rs  extensions.rs  lib.rs  walk_ignore.rs
crates/walk_parallel/: Cargo.toml
crates/walk_parallel/src/: error.rs  lib.rs  walk_ignore.rs  walk_patterns.rs
napi/doctor/: package.json  pnpm-lock.yaml  tsdown.config.mts
napi/doctor-engine/: Cargo.toml  engine.darwin-arm64.node  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
napi/doctor-engine/npm/darwin-arm64/: README.md  package.json
napi/doctor-engine/npm/darwin-x64/: README.md  package.json
napi/doctor-engine/npm/linux-arm64-gnu/: README.md  package.json
napi/doctor-engine/npm/linux-arm64-musl/: README.md  package.json
napi/doctor-engine/npm/linux-x64-gnu/: README.md  package.json
napi/doctor-engine/npm/linux-x64-musl/: README.md  package.json
napi/doctor-engine/npm/win32-arm64-msvc/: README.md  package.json
napi/doctor-engine/npm/win32-x64-msvc/: README.md  package.json
napi/doctor-engine/src/: lib.rs
napi/doctor/es/: index.d.mts  index.mjs
napi/doctor_engine/: Cargo.toml  demo.mjs  index.d.ts  index.js  oxlintrc.json  package-lock.json  package.json
napi/doctor_engine/src/: cloc.rs  cloc_binding.rs  doctor_binding.rs  lib.rs  log.rs  scheduler.rs
napi/doctor_engine/src/cloc/: language_statistics.rs  language_type.rs  mod.rs
napi/doctor_engine/src/lint/: diagnostic.rs  label.rs  location.rs  mod.rs  span.rs
napi/doctor_engine/src/specification/: messages.rs
napi/doctor_engine/tests/: inner_debug_lint.spec.mts
npm/doctor/: README.md  demo.mjs  package.json  pnpm-lock.yaml  rslib.config.mts  tsconfig.json  tsdown.config.mts  tsdown.config.ts  vite.config.ts
npm/doctor/es/: cli.mjs  index.d.mts
npm/doctor/esm/: cli.mjs
npm/doctor/src/: cli.mts  cli.ts  index.mts
(+15 files in other folders)
