[workspace]
members = [
  "crates/cloc",
  "crates/doctor",
  "crates/core",
  "crates/lint",
  "crates/node",
  "crates/npmrc",
  "crates/package_json",
  "crates/walk",
  "crates/binding",
  "crates/syntax",
]
resolver = "3"


[workspace.package]
authors      = ["ityuany <519495771@qq.com>"]
edition      = "2024"
homepage     = "https://github.com/sheinsight/doctor-engine"
license      = "MIT"
repository   = "https://github.com/sheinsight/doctor-engine"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow        = { version = "^1.0.100" }
base64        = { version = "^0.22.1" }
bitflags      = { version = "^2.9.4" }
config        = { version = "^0.15.17" }
env_logger    = { version = "^0.11.8" }
hashbrown     = { version = "^0.16.0" }
ignore        = { version = "^0.4.23" }
insta         = { version = "^1.43.2" }
jsonc-parser  = { version = "^0.26.3" }
lazy-regex    = { version = "^3.4.1" }
log           = { version = "^0.4.28" }
miette        = { version = "^7.6.0", features = ["derive", "fancy"] }
node-semver   = { version = "^2.2.0" }
pathdiff      = { version = "^0.2.3" }
rayon         = { version = "^1.11.0" }
ropey         = { version = "^1.6.1" }
rustc-hash    = { version = "^2.1.1" }
smallvec      = { version = "^1.15.1" }
tabled        = { version = "^0.20.0" }
thiserror     = { version = "^2.0.17" }
tokei         = { version = "^12.0.0" }
tokio         = { version = "^1.47.0", features = ["macros", "rt-multi-thread"] }
typed-builder = { version = "^0.22.0" }

serde      = { version = "^1.0.219", features = ["derive"] }
serde_ini  = { version = "^0.2.0" }
serde_json = { version = "^1.0.140" }


#napi
napi        = { version = "=3.3.0", features = ["tokio_rt"] }
napi-build  = { version = "=2.2.3" }
napi-derive = { version = "=3.2.5" }

strum        = { version = "^0.27.2" }
strum_macros = { version = "^0.27.2" }

# lint
oxc        = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v1.10.0", package = "oxc" }
oxc_linter = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v1.10.0", package = "oxc_linter" }


# glob
package_json_parser = { version = "0.0.7" }

doctor              = { path = "crates/doctor" }
doctor_binding      = { path = "crates/binding" }
doctor_cloc         = { path = "crates/cloc" }
doctor_core         = { path = "crates/core" }
doctor_lint         = { path = "crates/lint" }
doctor_node         = { path = "crates/node" }
doctor_npmrc        = { path = "crates/npmrc" }
doctor_package_json = { path = "crates/package_json" }
doctor_syntax       = { path = "crates/syntax" }
doctor_walk         = { path = "crates/walk" }

[profile.release]
# 发布构建优化
codegen-units = 1       # 单一代码生成单元，提高优化效果
debug         = false   # 禁用调试信息
lto           = true    # 启用链接时优化
opt-level     = 3       # 最高级别的优化
panic         = "abort" # panic 时直接终止，减少二进制大小
strip         = true    # 移除调试符号

[profile.dev]
# 开发构建优化
debug            = true # 保留调试信息
debug-assertions = true # 启用调试断言
incremental      = true # 启用增量编译
opt-level        = 1    # 轻度优化，在编译速度和运行速度之间平衡

[profile.test]
# 测试构建优化
codegen-units    = 16   # 更多的代码生成单元，加快编译
debug            = true # 保留调试信息
debug-assertions = true # 启用调试断言
incremental      = true # 启用增量编译
opt-level        = 1    # 轻度优化

[profile.bench]
# 基准测试构建优化
codegen-units    = 1     # 单一代码生成单元
debug            = false # 禁用调试信息
debug-assertions = false # 禁用调试断言
lto              = true  # 启用链接时优化
opt-level        = 3     # 最高级别优化
