[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_binding"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow       = { workspace = true }
base64       = { workspace = true }
env_logger   = { workspace = true }
log          = { workspace = true }
miette       = { workspace = true }
napi         = { workspace = true }
napi-derive  = { workspace = true }
oxc          = { workspace = true }
oxc_linter   = { workspace = true }
pathdiff     = { workspace = true }
ropey        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smallvec     = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
tabled       = { workspace = true }

doctor = { workspace = true }
