[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_cloc"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[features]
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
napi        = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
tokei       = { workspace = true }
