[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_core"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
miette              = { workspace = true, features = ["fancy"] }
node-semver         = { workspace = true }
oxc                 = { workspace = true }
oxc_linter          = { workspace = true }
package_json_parser = { workspace = true }
ropey               = { workspace = true }
serde               = { workspace = true }
serde_ini           = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
typed-builder       = { workspace = true }
