[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
doctor_ext           = { path = "../ext" }
doctor_lint          = { path = "../lint" }
doctor_node          = { path = "../node" }
doctor_npmrc         = { path = "../npmrc" }
doctor_package_json  = { path = "../package_json" }
doctor_walk_parallel = { path = "../walk_parallel" }
