[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
doctor_ext           = { workspace = true }
doctor_lint          = { workspace = true }
doctor_node          = { workspace = true }
doctor_npmrc         = { workspace = true }
doctor_package_json  = { workspace = true }
doctor_walk_parallel = { workspace = true }
