[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_ext"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
biome_rowan     = "=0.5.7"
miette          = { workspace = true, features = ["fancy"] }
node-semver     = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_linter      = { workspace = true }
ropey           = { workspace = true }
serde_ini       = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
typed-builder   = { workspace = true }
