[package]
name = "lint"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxc_allocator ={ workspace = true}
oxc_diagnostics ={ workspace = true}
oxc_linter ={ workspace = true}
oxc_parser ={ workspace = true}
oxc_semantic ={ workspace = true}
oxc_span ={ workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
rustc-hash = {workspace = true}