[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_node"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
doctor_ext = { path = "../ext" }
thiserror  = { workspace = true }
