[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_node"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
lazy-regex    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
typed-builder = { workspace = true }

doctor_ext = { workspace = true }
