[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "npmrc"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
config    = { workspace = true }
thiserror = { workspace = true }
