

# [[bin]]
# name = "hello"
# path = "src/main.rs"

[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_engine_package_json"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
jsonpath_lib = { workspace = true }
miette       = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
