

# [[bin]]
# name = "hello"
# path = "src/main.rs"

[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_package_json"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]

miette              = { workspace = true }
package_json_parser = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
typed-builder       = { workspace = true }
# biome_deserialize        = { workspace = true }
# biome_deserialize_macros = { workspace = true }
# biome_json_parser        = { workspace = true }
# biome_json_syntax        = { workspace = true }

doctor_ext = { workspace = true }
