[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_syntax"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
doctor_core     = { workspace = true }
doctor_walk     = { workspace = true }
miette          = { workspace = true }
oxc_allocator   = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser      = { workspace = true }
oxc_semantic    = { workspace = true }
oxc_span        = { workspace = true }
typed-builder   = { workspace = true }
