[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_walk_parallel"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
ignore        = { workspace = true }
log           = { workspace = true }
rayon         = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
typed-builder = { workspace = true }
