[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_engine"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
doctor          = { path = "../../crates/doctor" }
napi            = { workspace = true }
napi-derive     = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_linter      = { workspace = true }
oxc_span        = { workspace = true }
ropey           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
