[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "doctor_engine"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
env_logger      = { workspace = true }
log             = { workspace = true }
napi            = { workspace = true }
napi-derive     = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_linter      = { workspace = true }
oxc_span        = { workspace = true }
pathdiff        = { workspace = true }
ropey           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
strum           = { workspace = true }
strum_macros    = { workspace = true }

doctor = { workspace = true }
